# ESGI-MachineLearning

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  run.bat
include/neural/: neuron.h
include/neuro/: neuroApi.hpp
libs/eigen/: CMakeLists.txt
libs/eigen/bench/btl/data/: CMakeLists.txt
libs/eigen/blas/: CMakeLists.txt
libs/eigen/doc/: CMakeLists.txt
libs/eigen/lapack/: CMakeLists.txt
neuro/: CMakeLists.txt
neuro/include/: neuro.hpp  stb.hpp
neuro/include/algorithms/: linearRegression.hpp
neuro/include/data/: ImageETL.hpp
neuro/src/: neuro.cpp  stb.cpp
neuro/src/algorithms/: linearRegression.cpp
neuro/src/data/: ImageETL.cpp
neuroCore/: CMakeLists.txt  main.cpp
neuroCore/include/: neuroApi.hpp
neuroCore/include/etl/: etl.hpp
neuroCore/include/networks/: linearRegression.hpp
neuroCore/src/: neuroApi.cpp
neuroCore/src/etl/: etl.cpp
neuroCore/src/networks/: linearRegression.cpp
src/: CMakeLists.txt  main.cpp
src/neuro/: CMakeLists.txt  neuroApi.cpp
test/: dllTest.py
tools/: scrapper.py
